--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -33,6 +33,7 @@
         
         <div class="border-t border-gray-500 mt-8 pt-8 text-center text-gray-400">
             <p>&copy; 2025 shotdevs. All rights reserved.</p>
+            <p>Powered @shotxd</p>
         </div>
     </div>
   </footer>
